--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 data
-
+*.csv
 
 
 
@@ -8,10 +8,6 @@ data
 
 ### Code ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 
 ### Eclipse ###
 .metadata
